feat: improve image page
